[gd_scene load_steps=38 format=4 uid="uid://cy3pblpspm45t"]

[ext_resource type="Script" uid="uid://ctd105liekxkf" path="res://scripts/game_1.gd" id="1_6xfxu"]
[ext_resource type="PackedScene" uid="uid://dd4ishvci0dcp" path="res://scenes/player.tscn" id="1_8lody"]
[ext_resource type="PackedScene" uid="uid://dxasanpscdmcc" path="res://scenes/killzone.tscn" id="3_6pa5a"]
[ext_resource type="FontFile" uid="uid://ditxsxqaxhw6t" path="res://assets/Fonts/Firestor.ttf" id="6_a1lbx"]
[ext_resource type="FontFile" uid="uid://bitgycu4ph68m" path="res://assets/Fonts/Cybrpnuk2.ttf" id="7_gosqb"]
[ext_resource type="Texture2D" uid="uid://bddmk5ff5ouyj" path="res://assets/TILE SETS/Layers/sky.png" id="8_prawa"]
[ext_resource type="Texture2D" uid="uid://b7jaskj5mbb1n" path="res://assets/TILE SETS/Layers/far-clouds.png" id="9_a1lbx"]
[ext_resource type="PackedScene" uid="uid://dxl3bxt4011ss" path="res://scenes/player_2.tscn" id="9_luixn"]
[ext_resource type="Script" uid="uid://dypg0y4f7w4j2" path="res://scripts/camera_controller1.gd" id="10_fxokx"]
[ext_resource type="Texture2D" uid="uid://bjopxtntpft83" path="res://assets/TILE SETS/Layers/near-clouds.png" id="10_gosqb"]
[ext_resource type="Texture2D" uid="uid://db1jayqp4m1kd" path="res://assets/TILE SETS/Layers/far-mountains.png" id="11_5lnxe"]
[ext_resource type="PackedScene" uid="uid://db6xwa4mcvo1x" path="res://scenes/health_bar.tscn" id="11_bwy7h"]
[ext_resource type="Texture2D" uid="uid://cidyjgduoef7s" path="res://assets/TILE SETS/Layers/mountains.png" id="12_fxkey"]
[ext_resource type="Texture2D" uid="uid://cx7ogl8oyi1hj" path="res://assets/TILE SETS/Layers/trees.png" id="13_l075e"]
[ext_resource type="Texture2D" uid="uid://cx51yel12a5hi" path="res://assets/TILE SETS/Layer_0002_7.png" id="14_cuiao"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_6pa5a"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_a1lbx"]
texture = ExtResource("14_cuiao")
texture_region_size = Vector2i(32, 32)
0:6/size_in_atlas = Vector2i(29, 1)
0:6/0 = 0
0:7/size_in_atlas = Vector2i(29, 3)
0:7/0 = 0
0:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-463.91663, -57.227776, 464.06528, -55.444057, 464, 47, -464, 48)
0:10/size_in_atlas = Vector2i(29, 5)
0:10/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_prawa"]
texture = ExtResource("8_prawa")
texture_region_size = Vector2i(32, 32)
0:0/size_in_atlas = Vector2i(10, 7)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gosqb"]
texture = ExtResource("9_a1lbx")
0:3/size_in_atlas = Vector2i(8, 12)
0:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5lnxe"]
texture = ExtResource("13_l075e")
0:6/size_in_atlas = Vector2i(15, 9)
0:6/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fxkey"]
texture = ExtResource("12_fxkey")
0:3/size_in_atlas = Vector2i(20, 12)
0:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_l075e"]
texture = ExtResource("11_5lnxe")
0:5/size_in_atlas = Vector2i(10, 10)
0:5/0 = 0

[sub_resource type="TileSet" id="TileSet_gosqb"]
physics_layer_0/collision_layer = 15
physics_layer_0/collision_mask = 15
sources/0 = SubResource("TileSetAtlasSource_a1lbx")
sources/1 = SubResource("TileSetAtlasSource_prawa")
sources/2 = SubResource("TileSetAtlasSource_gosqb")
sources/3 = SubResource("TileSetAtlasSource_5lnxe")
sources/4 = SubResource("TileSetAtlasSource_fxkey")
sources/5 = SubResource("TileSetAtlasSource_l075e")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gvls4"]
texture = ExtResource("13_l075e")
0:6/size_in_atlas = Vector2i(15, 9)
0:6/0 = 0

[sub_resource type="TileSet" id="TileSet_cuiao"]
sources/0 = SubResource("TileSetAtlasSource_gvls4")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_cuiao"]
texture = ExtResource("12_fxkey")
0:2/size_in_atlas = Vector2i(20, 13)
0:2/0 = 0

[sub_resource type="TileSet" id="TileSet_15hsu"]
sources/0 = SubResource("TileSetAtlasSource_cuiao")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_272ig"]
texture = ExtResource("11_5lnxe")
0:5/size_in_atlas = Vector2i(10, 10)
0:5/0 = 0

[sub_resource type="TileSet" id="TileSet_o4bcf"]
sources/0 = SubResource("TileSetAtlasSource_272ig")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ale7x"]
texture = ExtResource("10_gosqb")
0:4/size_in_atlas = Vector2i(9, 11)
0:4/0 = 0

[sub_resource type="TileSet" id="TileSet_7v3t4"]
sources/0 = SubResource("TileSetAtlasSource_ale7x")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_h1yl0"]
texture = ExtResource("9_a1lbx")
0:3/size_in_atlas = Vector2i(8, 12)
0:3/0 = 0

[sub_resource type="TileSet" id="TileSet_vwnon"]
sources/0 = SubResource("TileSetAtlasSource_h1yl0")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2p4cb"]
texture = ExtResource("8_prawa")
8:0/size_in_atlas = Vector2i(4, 15)
8:0/0 = 0
0:0/size_in_atlas = Vector2i(8, 15)
0:0/0 = 0
12:0/size_in_atlas = Vector2i(8, 15)
12:0/0 = 0

[sub_resource type="TileSet" id="TileSet_155u1"]
sources/0 = SubResource("TileSetAtlasSource_2p4cb")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_prawa"]
size = Vector2(257, 677)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a1lbx"]
size = Vector2(285, 924)

[node name="GAME 1" type="Node2D"]
position = Vector2(-1919, 0)
script = ExtResource("1_6xfxu")

[node name="player_1" parent="." instance=ExtResource("1_8lody")]
position = Vector2(1701.0001, -446)
scale = Vector2(12, 12)

[node name="player_2" parent="." instance=ExtResource("9_luixn")]
z_index = 5
position = Vector2(2127.0002, -430)
scale = Vector2(3.75, 3.75)
collision_mask = 6
character_name = "player_1"

[node name="killzone" parent="." instance=ExtResource("3_6pa5a")]
position = Vector2(2278, 203)
collision_layer = 1
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="killzone"]
position = Vector2(1, 1)
shape = SubResource("WorldBoundaryShape2D_6pa5a")

[node name="UI" type="CanvasLayer" parent="."]

[node name="player_1_name" type="Label" parent="UI"]
offset_left = 10.0
offset_right = 160.0
offset_bottom = 75.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8627451)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_a1lbx")
theme_override_font_sizes/font_size = 64
text = "Geralt "

[node name="player_2_name" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -78.0
offset_right = -10.0
offset_bottom = 75.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.80784315)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_a1lbx")
theme_override_font_sizes/font_size = 64
text = "Ciri"

[node name="health_bar_player_1" parent="UI" instance=ExtResource("11_bwy7h")]
offset_top = 62.0
offset_bottom = 86.0

[node name="health_bar_player_2" parent="UI" instance=ExtResource("11_bwy7h")]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -420.0
offset_top = 61.0
offset_right = 0.0
offset_bottom = 85.0
grow_horizontal = 0
fill_mode = 1

[node name="round_timer" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -39.130432
offset_right = 39.130432
offset_bottom = 75.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.74509805)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_a1lbx")
theme_override_font_sizes/font_size = 64

[node name="round_counter" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 85.0
offset_right = 20.0
offset_bottom = 160.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8352941)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_a1lbx")
theme_override_font_sizes/font_size = 64

[node name="match_state_msgs" type="Label" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.565186
offset_top = -190.0
offset_right = 39.565186
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.7529412, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.7058824)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_a1lbx")
theme_override_font_sizes/font_size = 128

[node name="victory_screen" type="Panel" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="restart_button" type="Button" parent="UI/victory_screen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -278.5
offset_top = -40.0
offset_right = 278.5
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_gosqb")
theme_override_font_sizes/font_size = 32
text = "Restart Match"

[node name="camera_controller" type="Node2D" parent="."]
position = Vector2(1483, -352)
script = ExtResource("10_fxokx")

[node name="Camera2D" type="Camera2D" parent="camera_controller"]
position = Vector2(274, -107)
scale = Vector2(1.2301453, 4.3157477)
zoom = Vector2(0.325, 0.325)
limit_left = -8387
limit_right = 11742
limit_bottom = 1

[node name="round_timer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[node name="TileMapLayer" type="TileMapLayer" parent="."]
z_index = 1
position = Vector2(1423, -469)
tile_map_data = PackedByteArray("AAAtABAAAAAAAAcAAADz/xAAAAAAAAcAAADz/wwAAAAAAAYAAAAtAAwAAAAAAAYAAABnABAAAAAAAAcAAABnAAwAAAAAAAYAAAChABAAAAAAAAcAAADbABAAAAAAAAcAAAAUARAAAAAAAAcAAAC5/xAAAAAAAAcAAAB//xAAAAAAAAcAAABF/xAAAAAAAAcAAAAL/xAAAAAAAAcAAAC5/wwAAAAAAAYAAAB//wwAAAAAAAYAAABF/wwAAAAAAAYAAAAL/wwAAAAAAAYAAAChAAwAAAAAAAYAAADbAAwAAAAAAAYAAAAVAQwAAAAAAAYAAAAUARgAAAAAAAoAAADbABgAAAAAAAoAAAChABgAAAAAAAoAAABnABgAAAAAAAoAAAAtABgAAAAAAAoAAADz/xgAAAAAAAoAAAC5/xgAAAAAAAoAAAB//xgAAAAAAAoAAABF/xgAAAAAAAoAAAAL/xgAAAAAAAoAAABOARAAAAAAAAcAAACIARAAAAAAAAcAAADCARAAAAAAAAcAAAD8ARAAAAAAAAcAAAA2AhAAAAAAAAcAAABwAhAAAAAAAAcAAADR/hgAAAAAAAoAAACX/hgAAAAAAAoAAABd/hgAAAAAAAoAAAAk/hgAAAAAAAoAAADq/RgAAAAAAAoAAACw/RgAAAAAAAoAAADR/hAAAAAAAAcAAACX/hAAAAAAAAcAAABd/hAAAAAAAAcAAAAj/hAAAAAAAAcAAADp/RAAAAAAAAcAAACv/RAAAAAAAAcAAADR/gwAAAAAAAYAAACX/gwAAAAAAAYAAABd/gwAAAAAAAYAAAAj/gwAAAAAAAYAAADp/QwAAAAAAAYAAACv/QwAAAAAAAYAAABOARgAAAAAAAoAAACIARgAAAAAAAoAAADCARgAAAAAAAoAAAD8ARgAAAAAAAoAAAA2AhgAAAAAAAoAAABwAhgAAAAAAAoAAABPAQwAAAAAAAYAAACJAQwAAAAAAAYAAADDAQwAAAAAAAYAAAD9AQwAAAAAAAYAAAA3AgwAAAAAAAYAAABwAgwAAAAAAAYAAAA=")
tile_set = SubResource("TileSet_gosqb")

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
z_index = -50
scale = Vector2(8, 8)
tile_map_data = PackedByteArray("AAANAPr/AAAAAAYAAAAcAPn/AAAAAAYAAAD+//r/AAAAAAYAAADv//r/AAAAAAYAAAArAPr/AAAAAAYAAAA6APr/AAAAAAYAAABJAPr/AAAAAAYAAABYAPr/AAAAAAYAAADg//r/AAAAAAYAAADR//r/AAAAAAYAAADC//r/AAAAAAYAAAA=")
tile_set = SubResource("TileSet_cuiao")

[node name="TileMapLayer3" type="TileMapLayer" parent="."]
z_index = -51
scale = Vector2(8, 8)
tile_map_data = PackedByteArray("AAAQAPj/AAAAAAIAAAAkAPj/AAAAAAIAAAD8//j/AAAAAAIAAAA4APj/AAAAAAIAAABMAPj/AAAAAAIAAADo//j/AAAAAAIAAADU//j/AAAAAAIAAADA//j/AAAAAAIAAAA=")
tile_set = SubResource("TileSet_15hsu")

[node name="TileMapLayer4" type="TileMapLayer" parent="."]
z_index = -52
scale = Vector2(8, 8)
tile_map_data = PackedByteArray("AAAKAPn/AAAAAAUAAAAUAPn/AAAAAAUAAAAeAPn/AAAAAAUAAAAAAPn/AAAAAAUAAAAoAPn/AAAAAAUAAAD2//n/AAAAAAUAAADs//n/AAAAAAUAAAAyAPn/AAAAAAUAAAA8APn/AAAAAAUAAABGAPn/AAAAAAUAAABQAPn/AAAAAAUAAABaAPn/AAAAAAUAAADi//n/AAAAAAUAAADY//n/AAAAAAUAAADO//n/AAAAAAUAAADE//n/AAAAAAUAAAC6//n/AAAAAAUAAAA=")
tile_set = SubResource("TileSet_o4bcf")

[node name="TileMapLayer5" type="TileMapLayer" parent="."]
z_index = -53
scale = Vector2(8, 8)
tile_map_data = PackedByteArray("AAAJAPn/AAAAAAQAAAASAPn/AAAAAAQAAAAbAPn/AAAAAAQAAAAAAPn/AAAAAAQAAAD3//n/AAAAAAQAAADu//n/AAAAAAQAAAAkAPn/AAAAAAQAAAAtAPn/AAAAAAQAAADl//n/AAAAAAQAAADc//n/AAAAAAQAAADT//n/AAAAAAQAAADK//n/AAAAAAQAAADB//n/AAAAAAQAAAA2APn/AAAAAAQAAAA/APn/AAAAAAQAAABIAPn/AAAAAAQAAABRAPn/AAAAAAQAAABaAPn/AAAAAAQAAAA=")
tile_set = SubResource("TileSet_7v3t4")

[node name="TileMapLayer6" type="TileMapLayer" parent="."]
z_index = -54
scale = Vector2(8, 8)
tile_map_data = PackedByteArray("AAAIAPn/AAAAAAMAAAAQAPn/AAAAAAMAAAAYAPn/AAAAAAMAAAAgAPn/AAAAAAMAAAAoAPn/AAAAAAMAAAAwAPn/AAAAAAMAAAAAAPn/AAAAAAMAAAD4//n/AAAAAAMAAADw//n/AAAAAAMAAADo//n/AAAAAAMAAADg//n/AAAAAAMAAADY//n/AAAAAAMAAADQ//n/AAAAAAMAAADI//n/AAAAAAMAAADA//n/AAAAAAMAAAA4APn/AAAAAAMAAABAAPn/AAAAAAMAAABIAPn/AAAAAAMAAABQAPn/AAAAAAMAAABYAPn/AAAAAAMAAAA=")
tile_set = SubResource("TileSet_vwnon")

[node name="TileMapLayer7" type="TileMapLayer" parent="."]
z_index = -55
scale = Vector2(8, 8)
tile_map_data = PackedByteArray("AAAQAPf/AAAIAAAAAAAWAPf/AAAMAAAAAAAKAPf/AAAAAAAAAAAeAPf/AAAAAAAAAAAmAPf/AAAMAAAAAAACAPf/AAAMAAAAAAD6//f/AAAAAAAAAAAuAPf/AAAAAAAAAADy//f/AAAMAAAAAADq//f/AAAAAAAAAAA2APf/AAAMAAAAAAA+APf/AAAAAAAAAABEAPf/AAAIAAAAAABKAPf/AAAMAAAAAABSAPf/AAAAAAAAAABaAPf/AAAMAAAAAADi//f/AAAMAAAAAADc//f/AAAIAAAAAADW//f/AAAAAAAAAADO//f/AAAMAAAAAADG//f/AAAAAAAAAAC+//f/AAAMAAAAAAA=")
tile_set = SubResource("TileSet_155u1")

[node name="world_boundary_right" type="StaticBody2D" parent="."]
position = Vector2(0, 121)

[node name="CollisionShape2D" type="CollisionShape2D" parent="world_boundary_right"]
position = Vector2(11741.5, -724.5)
shape = SubResource("RectangleShape2D_prawa")

[node name="world_boundary_left" type="StaticBody2D" parent="."]
position = Vector2(0, 283)

[node name="CollisionShape2D" type="CollisionShape2D" parent="world_boundary_left"]
position = Vector2(-8387.5, -1015)
shape = SubResource("RectangleShape2D_a1lbx")

[connection signal="health_changed" from="player_2" to="." method="_on_player_2_health_changed"]
[connection signal="health_changed" from="player_2" to="." method="_on_player_health_changed"]
[connection signal="timeout" from="round_timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="round_timer" to="." method="_on_round_timer_timeout"]
